<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- - - - - - - - - - - - - -->
    <!-- Used throughout Sunshine-->
    <!-- - - - - - - - - - - - - -->

    <!--Used in Action Bar, and in AndroidManifest to tell the device the name of this app.-->
    <!--It's good to keep this short, so your launcher icon isn't displayed with "The greatest Wea"-->
    <!--or something similar.-->
    <string name="app_name">Sunshine</string>


    <string name="pref_general_home_location_label">Set home Coordinates</string>
    <string name="pref_general_home_location_key">home_coordinates</string>


    <string name="pref_general_latitude_label">Latitude</string>
    <string name="pref_general_latitude_key">latitude</string>
    <string name="pref_general_latitude_default">26.68</string>


    <string name="pref_general_longitude_label">Longitude</string>
    <string name="pref_general_longitude_key">longitude</string>
    <string name="pref_general_longtude_default">77.12</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default_value">@string/pref_units_celcius_value</string>

    <string name="pref_units_celcius_label">Celcius</string>
    <string name="pref_units_kelvin_label">kelvin</string>
    <string name="pref_units_celcius_value" translatable="false">celcius</string>
    <string name="pref_units_kelvin_value" translatable="false">kelvin</string>

</resources>